css/style.css
@font-face {
  font-family: "Gilroy";
  font-style: normal;
  font-weight: 300;
  src: local("Gilroy"),
       url("../fonts/gilroylight.woff2") format("woff2"),
       url("../fonts/gilroylight.woff") format("woff");
}

@font-face {
  font-family: "Gilroy";
  font-style: normal;
  font-weight: 800;
  src: local("Gilroy"),
       url("../fonts/gilroyextrabold.woff2") format("woff2"),
       url("../fonts/gilroyextrabold.woff") format("woff");
}

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 300;
  src: local("Opensans"),
       url("../fonts/opensanslight.woff2") format("woff2"),
       url("../fonts/opensanslight.woff") format("woff");
}

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 400;
  src: local("Opensans"),
       url("../fonts/opensans.woff2") format("woff2"),
       url("../fonts/opensans.woff") format("woff");
}

html { box-sizing: border-box; }
*, *::before, *::after { box-sizing: inherit; }

body {
  margin: 0;
  padding: 0;

  font-family: "Open Sans", "Trebuchet MS", sans-serif;
  font-size: 15px;
  line-height: 30px;
  font-weight: 300;
  color: #464646;

  background-color: #ffffff;

  /*background-image: url("../img/1device-index.jpg");*/
  /*background-image: url("../img/1device-catalog.jpg");*/

  /*background-position: top center;*/
  /*background-repeat: no-repeat;*/
}

a {
  color: inherit;
  text-decoration: none;
}

img {
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  position: absolute;

  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;

  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.hidden {
  display: none;
}

.button {
  display: block;
  padding: 8px 20px;
  width: 220px;

  font-family: "Gilroy", "Arial Black", sans-serif;
  font-size: 18px;
  line-height: 24px;
  font-weight: 800;
  color: #000000;
  text-align: center;
  vertical-align: middle;
  text-transform: uppercase;
  letter-spacing: 0.2em;

  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 40%, rgba(240, 197, 46, 1) 40%, rgba(240, 197, 46, 1) 60%, rgba(255, 255, 255, 0) 60%);
  border: none;
}

.button:hover,
.button:focus {
  background: rgba(240, 197, 46, 1);
}

.button:active {
  color: rgba(0, 0, 0, 0.3);
}

.container {
  width: 1160px;
  margin: 0 auto;
  padding: 0;
}

.main-header {
  box-sizing: border-box;
  padding: 23px 60px 50px;
  margin: 0 auto;

  background: linear-gradient(to bottom, #ffffff 40px, #f7e296 40px);
}

.row {
  display: flex;
}

.main-header .logo {
  display: block;
  margin-bottom: 16px;
}

.main-header .row {
  margin-bottom: 38px;
}

.site-search {
  position: relative;
}

.site-search-input {
  padding-left: 36px;
  opacity: 0.3;
}

.site-search-input::before {
  /*
  content: "";
  position: absolute;
  width: 16px;
  height: 16px;
  top: 9px;
  left: 6px;

  background-image: url("../img/search.svg");
  */
}

.site-search-input:hover {
  opacity: 0.6;
}

.site-search-input:focus {
  opacity: 1;
}

.user-nav {
  display: flex;
  padding: 0;
  margin: 0;

  list-style: none;
}

.user-header {
  margin-right: 46px;
  width: 235px;
  margin-left: auto;
}

.user-nav li {
  position: relative;
  padding-left: 30px;
}

.login-link {
  margin-right: 18px;
}

.login-link::before {
  content: "";
  position: absolute;
  display: block;
  width: 13px;
  height: 12px;
  top: 8px;
  left: 5px;
}

.user-header .login-link::before {
  background-image: url("data:image/svg+xml,%3Csvg class='user-icon' xmlns='http://www.w3.org/2000/svg' width='13' height='12' viewBox='0 0 13 12'%3E%3Cpath fill='%23272525' d='M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z'/%3E%3C/svg%3E");
}
.user-nav a:hover,
.user-nav a:focus {
  opacity: 0.6;
}

.user-nav a:active {
  opacity: 0.3;
}

.purchase-nav {
  display: flex;
  padding: 0;
  margin: 0;

  list-style: none;
}

.purchase-nav li {
  position: relative;
  padding-left: 30px;
}

.purchase-nav li:not(:first-child) {
  margin-left: 35px;
}

.compare-link::before {
  content: "";
  position: absolute;
  display: block;
  width: 10px;
  height: 10px;
  top: 10px;
  left: 10px;
}

.purchase-header .compare-link::before {
  background-image: url("data:image/svg+xml,%3Csvg class='compare-icon' xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath d='M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z'/%3E%3C/svg%3E");
}

.cart-link::before {
  content: "";
  position: absolute;
  display: block;
  width: 12px;
  height: 12px;
  top: 8px;
  left: 7px;
}

.purchase-header .cart-link::before {
  background-image: url("data:image/svg+xml,%3Csvg class='cart-icon' xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath d='M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z'/%3E%3Cpath d='M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z'/%3E%3C/svg%3E");
}

.logo-header {
  margin-bottom: 20px;
}

.logo:hover,
.logo:focus {
  opacity: 0.6;
}

.logo:active {
  opacity: 0.3;
}

.main-nav-list {
  display: flex;
  margin: 0;
  padding: 0;

  font-family: "Gilroy", "Arial Black", sans-serif;
  font-size: 18px;
  line-height: 24px;
  font-weight: 800;
  color: #000000;
  letter-spacing: 0.2em;
  text-transform: uppercase;

  list-style: none;
}


.nav-header > li:nth-child(2) {
  margin-left: auto;
  margin-right: 34px;
}
/* ... */

